force-app/main/default/objects/FEC_Allocation_History__c/FEC_Allocation_History__c.object-meta.xml
<CustomObject>
    <description>Lịch sử phân bổ</description>
    <label>Allocation History</label>
    <nameField>
        <label>Allocation History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Allocation Histories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>