force-app/main/default/objects/FEC_Allocation_History__c/fields/FEC_Agent_ID__c.field-meta.xml
<CustomField>
    <fullName>FEC_Agent_ID__c</fullName>
    <description>Mã nhân viên</description>
    <label>Agent ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>