force-app/main/default/objects/FEC_Allocation_History__c/fields/FEC_Agent_Name__c.field-meta.xml
<CustomField>
    <fullName>FEC_Agent_Name__c</fullName>
    <description>Tên nhân viên</description>
    <label>Agent Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>