force-app/main/default/objects/FEC_Allocation_History__c/fields/FEC_Allocation_Date__c.field-meta.xml
<CustomField>
    <fullName>FEC_Allocation_Date__c</fullName>
    <description>Ngày phân bổ</description>
    <label>Allocation Date</label>
    <type>DateTime</type>
</CustomField>