force-app/main/default/objects/FEC_Allocation_History__c/fields/FEC_Current_Pool__c.field-meta.xml
<CustomField>
    <fullName>FEC_Current_Pool__c</fullName>
    <description>Nhóm hiện tại</description>
    <label>Current Pool</label>
    <length>255</length>
    <type>Text</type>
</CustomField>