force-app/main/default/objects/FEC_Allocation_History__c/fields/FEC_Customer_History__c.field-meta.xml
<CustomField>
    <fullName>FEC_Customer_History__c</fullName>
    <label>Customer History</label>
    <referenceTo>FEC_Customer_History__c</referenceTo>
    <relationshipLabel>Allocation Histories</relationshipLabel>
    <relationshipName>Allocation_Histories</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>