force-app/main/default/objects/FEC_Allocation_History__c/fields/FEC_DPD__c.field-meta.xml
<CustomField>
    <fullName>FEC_DPD__c</fullName>
    <description>Số ngày quá hạn</description>
    <label>DPD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>