force-app/main/default/objects/FEC_Allocation_History__c/fields/FEC_Job__c.field-meta.xml
<CustomField>
    <fullName>FEC_Job__c</fullName>
    <description>Nhóm ngành/ nghề</description>
    <label>Job</label>
    <length>255</length>
    <type>Text</type>
</CustomField>