force-app/main/default/objects/FEC_Allocation_History__c/fields/FEC_POS__c.field-meta.xml
<CustomField>
    <fullName>FEC_POS__c</fullName>
    <description>Nợ gốc</description>
    <label>POS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>